[package]
name = "cptb"
version = "0.1.0"
authors = ["Silvan Wegmann <silvan.wegmann@bbv.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
handlebars = "3.0.1"
rust-embed = "6.3.0"
ureq = "*"
serde_derive = "*"
serde = "*"
serde_json = "*"
dirs = "2.0.2"
git2 = "0.13.*"
tempdir = "*"